Fix: Se corrige table responsive

--- a/src/app/view/backoffice/account/last-transactions/last-transactions.component.html
+++ b/src/app/view/backoffice/account/last-transactions/last-transactions.component.html
@@ -14,38 +14,40 @@
         <div class="card-box mb-30">
             <div class="card-body">
                 <h2 class="h4 pd-20">Últimos movimientos</h2>
-                <table class="data-table table nowrap table-responsive" >
-                    <thead>
-                        <tr>
-                            <th class="table-plus datatable-nosort">Fecha</th>
-                            <th>Tipo</th>
-                            <th>Descripción</th>
-                            <th>Destinatario</th>
-                            <th>Monto</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <ng-container *ngIf="load.lastTransactions">
-                            <tr *ngFor="let lt of dataLastMovements" >
-                                <td class="table-plus">
-                                    {{lt.created | date:"dd/MM/yy HH:mm"}}
-                                </td>
-                                <td>
-                                    {{lt.transactions_type.description}}
-                                </td>
-                                <td>{{ lt.description }}</td>
-                                <td>{{ lt.destination != null ? lt.destination.name : null }}</td>
-                                <td *ngIf="lt.transactions_type.description == 'Cargo' || lt.transactions_type.description == 'Transferencias a terceros' ">-${{ lt.ammount | numberFormat }} <i class="icon-copy dw dw-diagonal-arrow-18"></i></td>
-                                <td *ngIf="lt.transactions_type.description == 'Abono'" style="color: green;">${{ lt.ammount | numberFormat }}<i class="icon-copy dw dw-diagonal-arrow-21"></i></td>
-                            </tr>
-                        </ng-container>
-                        <ng-container *ngIf="!load.lastTransactions">
+                <div style="overflow-x:auto;">
+                    <table class="data-table table nowrap" >
+                        <thead>
                             <tr>
-                                <td colspan="6"><h6> <i class="fa fa-spinner fa-spin"></i> Cargando los últimos movimientos</h6></td>
+                                <th class="table-plus datatable-nosort">Fecha</th>
+                                <th>Tipo</th>
+                                <th>Descripción</th>
+                                <th>Destinatario</th>
+                                <th>Monto</th>
                             </tr>
-                        </ng-container>
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                            <ng-container *ngIf="load.lastTransactions">
+                                <tr *ngFor="let lt of dataLastMovements" >
+                                    <td class="table-plus">
+                                        {{lt.created | date:"dd/MM/yy HH:mm"}}
+                                    </td>
+                                    <td>
+                                        {{lt.transactions_type.description}}
+                                    </td>
+                                    <td>{{ lt.description }}</td>
+                                    <td>{{ lt.destination != null ? lt.destination.name : null }}</td>
+                                    <td *ngIf="lt.transactions_type.description == 'Cargo' || lt.transactions_type.description == 'Transferencias a terceros' ">-${{ lt.ammount | numberFormat }} <i class="icon-copy dw dw-diagonal-arrow-18"></i></td>
+                                    <td *ngIf="lt.transactions_type.description == 'Abono'" style="color: green;">${{ lt.ammount | numberFormat }}<i class="icon-copy dw dw-diagonal-arrow-21"></i></td>
+                                </tr>
+                            </ng-container>
+                            <ng-container *ngIf="!load.lastTransactions">
+                                <tr>
+                                    <td colspan="6"><h6> <i class="fa fa-spinner fa-spin"></i> Cargando los últimos movimientos</h6></td>
+                                </tr>
+                            </ng-container>
+                        </tbody>
+                    </table>
+                <div style="overflow-x:auto;"></div>
             </div>
         </div>
     </div>
